--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "session",
+  "name": "@adonisjs/session",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,14 +19,24 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@adonisjs/sink": "^1.0.9",
     "cz-conventional-changelog": "^2.0.0",
     "japa": "^1.0.3",
     "japa-cli": "^1.0.1",
-    "standard": "^10.0.2"
+    "node-cookie": "^2.0.0",
+    "nyc": "^11.0.3",
+    "standard": "^10.0.2",
+    "supertest": "^3.0.0"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "lodash": "^4.17.4",
+    "ms": "^2.0.0",
+    "type-of-is": "^3.5.1",
+    "uuid": "^3.1.0"
   }
 }
