--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@adonisjs/fold": "^4.0.0",
     "@adonisjs/sink": "^1.0.9",
     "cz-conventional-changelog": "^2.0.0",
+    "ioredis": "^3.1.1",
     "japa": "^1.0.3",
     "japa-cli": "^1.0.1",
     "node-cookie": "^2.0.0",
