--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,9 @@ init:
   git config --global core.autocrlf true
 
 install:
+  - nuget install redis-64 -excludeversion
+  - redis-64\tools\redis-server.exe --service-install
+  - redis-64\tools\redis-server.exe --service-start
   - ps: Install-Product node $env:nodejs_version
   - npm install
 
