--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@adonisjs/fold": "^4.0.0",
     "@adonisjs/sink": "^1.0.9",
+    "coveralls": "^2.13.1",
     "cz-conventional-changelog": "^2.0.0",
     "ioredis": "^3.1.1",
     "japa": "^1.0.3",
