--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     }
   },
   "dependencies": {
+    "debug": "^2.6.8",
     "fs-extra": "^4.0.0",
     "lodash": "^4.17.4",
     "ms": "^2.0.0",
