--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fs-extra": "^4.0.0",
     "lodash": "^4.17.4",
     "ms": "^2.0.0",
+    "node-exceptions": "^2.0.2",
     "type-of-is": "^3.5.1",
     "uuid": "^3.1.0"
   },
