--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
     }
   },
   "nyc": {
-    "exclude": ["bin"]
+    "exclude": [
+      "bin"
+    ]
   },
   "dependencies": {
+    "@adonisjs/generic-exceptions": "^1.0.0",
     "debug": "^2.6.8",
     "fs-extra": "^4.0.0",
     "lodash": "^4.17.4",
     "ms": "^2.0.0",
-    "node-exceptions": "^2.0.2",
     "type-of-is": "^3.5.1",
     "uuid": "^3.1.0"
   },
