--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "macroable": "^1.0.0",
     "node-cookie": "^2.0.2",
     "nyc": "^11.2.1",
+    "objectid": "^3.2.1",
     "standard": "^10.0.3",
     "supertest": "^3.0.0"
   },
