--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   "author": "virk",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/ace": "^4.0.7",
     "@adonisjs/fold": "^4.0.5",
     "@adonisjs/sink": "^1.0.13",
     "coveralls": "^3.0.0",
     "cz-conventional-changelog": "^2.1.0",
-    "ioredis": "^3.2.1",
-    "japa": "^1.0.5",
+    "ioredis": "^3.2.2",
+    "japa": "^1.0.6",
     "japa-cli": "^1.0.1",
     "macroable": "^1.0.0",
-    "node-cookie": "^2.0.2",
-    "nyc": "^11.2.1",
+    "node-cookie": "^2.1.0",
+    "nyc": "^11.4.1",
+    "semver": "^5.5.0",
     "standard": "^10.0.3",
     "supertest": "^3.0.0"
   },
@@ -46,13 +46,13 @@
     ]
   },
   "dependencies": {
-    "@adonisjs/generic-exceptions": "^1.0.0",
+    "@adonisjs/generic-exceptions": "^2.0.0",
     "debug": "^3.1.0",
-    "fs-extra": "^4.0.2",
-    "lodash": "^4.17.4",
-    "ms": "^2.0.0",
+    "fs-extra": "^5.0.0",
+    "lodash": "^4.17.5",
+    "ms": "^2.1.1",
     "type-of-is": "^3.5.1",
-    "uuid": "^3.1.0"
+    "uuid": "^3.2.1"
   },
   "repository": {
     "type": "git",
