feat(store): allow objectid serialisation
* Added ObjectID type as session guard

* Added ObjectId unguard

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nyc": "^11.7.1",
     "semver": "^5.5.0",
     "standard": "^11.0.1",
+    "objectid": "^3.2.1",
     "supertest": "^3.0.0"
   },
   "config": {
