--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ services:
   - redis-server
 install:
   - npm install
+after_script:
+  - npm run coverage
 notifications:
   slack:
     secure: >-
