--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,15 +4,12 @@ environment:
     - nodejs_version: 8.0.0
 init: git config --global core.autocrlf true
 install:
-  - nuget install redis-64 -excludeversion
-  - redis-64\tools\redis-server.exe --service-install
-  - redis-64\tools\redis-server.exe --service-start
   - ps: 'Install-Product node $env:nodejs_version'
   - npm install
 test_script:
   - node --version
   - npm --version
-  - 'npm run test:win'
+  - npm run test
 build: 'off'
 clone_depth: 1
 matrix:
