--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
     "test:local": "FORCE_COLOR=true node bin/index.js --local",
-    "test": "nyc japa",
+    "test": "nyc node japaFile.js",
     "test:win": "node ./node_modules/japa-cli/index.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "commit": "git-cz",
@@ -31,22 +31,22 @@
   "license": "MIT",
   "devDependencies": {
     "@adonisjs/fold": "^4.0.9",
-    "@adonisjs/mrm-preset": "^1.0.9",
-    "@adonisjs/sink": "^1.0.16",
+    "@adonisjs/mrm-preset": "^1.0.13",
+    "@adonisjs/sink": "^1.0.17",
     "commitizen": "^2.10.1",
     "coveralls": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
-    "ioredis": "^3.2.2",
-    "japa": "^1.0.6",
+    "ioredis": "^4.0.0",
+    "japa": "^2.0.3",
     "japa-cli": "^1.0.1",
     "macroable": "^1.0.0",
     "mrm": "^1.2.1",
-    "node-cookie": "^2.1.0",
-    "nyc": "^12.0.2",
+    "node-cookie": "^2.1.1",
+    "nyc": "^13.0.1",
     "pkg-ok": "^2.2.0",
-    "semver": "^5.5.0",
-    "standard": "^11.0.1",
-    "supertest": "^3.1.0"
+    "semver": "^5.5.1",
+    "standard": "^12.0.1",
+    "supertest": "^3.3.0"
   },
   "config": {
     "commitizen": {
@@ -55,16 +55,15 @@
   },
   "nyc": {
     "exclude": [
-      "test",
-      "japaFile.js"
+      "test"
     ]
   },
   "dependencies": {
     "@adonisjs/generic-exceptions": "^2.0.1",
     "bson": "^3.0.2",
-    "debug": "^3.1.0",
-    "fs-extra": "^6.0.1",
-    "lodash": "^4.17.10",
+    "debug": "^4.0.1",
+    "fs-extra": "^7.0.0",
+    "lodash": "^4.17.11",
     "ms": "^2.1.1",
     "type-of-is": "^3.5.1",
     "uuid": "^3.3.2"
