chore(package): update dependencies

--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
   "license": "MIT",
   "devDependencies": {
     "@adonisjs/fold": "^4.0.9",
-    "@adonisjs/mrm-preset": "^1.0.13",
+    "@adonisjs/mrm-preset": "^1.0.14",
     "@adonisjs/sink": "^1.0.17",
-    "commitizen": "^2.10.1",
+    "commitizen": "^3.0.2",
     "coveralls": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
-    "ioredis": "^4.0.0",
-    "japa": "^2.0.3",
+    "ioredis": "^4.1.0",
+    "japa": "^2.0.5",
     "japa-cli": "^1.0.1",
     "macroable": "^1.0.0",
     "mrm": "^1.2.1",
     "node-cookie": "^2.1.1",
-    "nyc": "^13.0.1",
-    "pkg-ok": "^2.2.0",
-    "semver": "^5.5.1",
+    "nyc": "^13.1.0",
+    "pkg-ok": "^2.3.1",
+    "semver": "^5.6.0",
     "standard": "^12.0.1",
     "supertest": "^3.3.0"
   },
@@ -60,8 +60,8 @@
   },
   "dependencies": {
     "@adonisjs/generic-exceptions": "^2.0.1",
-    "bson": "^3.0.2",
-    "debug": "^4.0.1",
+    "bson": "^4.0.0-rc5",
+    "debug": "^4.1.0",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.11",
     "ms": "^2.1.1",
