--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "macroable": "^1.0.0",
     "mrm": "^1.2.1",
     "node-cookie": "^2.1.1",
+    "node-req": "^2.1.1",
     "nyc": "^13.1.0",
     "pkg-ok": "^2.3.1",
     "semver": "^5.6.0",
