fix: use same bson library as mongodb driver

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@adonisjs/generic-exceptions": "^2.0.1",
-    "bson": "^4.0.0-rc5",
+    "bson": "^1.1.0",
     "debug": "^4.1.0",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.11",
