--- a/package.json
+++ b/package.json
@@ -1,80 +1,72 @@
 {
   "name": "@adonisjs/session",
   "version": "1.0.28",
-  "description": "This repo is the official session provider for Adonisjs apps. It supports multiple drivers to store session data.",
-  "main": "providers/SessionProvider",
-  "files": [
-    "lib",
-    "providers",
-    "src",
-    "templates",
-    "instructions.js",
-    "instructions.js",
-    "instructions.md"
-  ],
-  "directories": {
-    "lib": "lib",
-    "test": "test"
+  "description": "Session provider for AdonisJs",
+  "dependencies": {},
+  "devDependencies": {
+    "@adonisjs/mrm-preset": "^2.0.3",
+    "@types/node": "^12.0.10",
+    "commitizen": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0",
+    "del-cli": "^2.0.0",
+    "doctoc": "^1.4.0",
+    "husky": "^2.4.1",
+    "japa": "^2.0.10",
+    "mrm": "^1.2.2",
+    "pkg-ok": "^2.3.1",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test:local": "FORCE_COLOR=true node bin/index.js --local",
-    "test": "nyc node japaFile.js",
-    "test:win": "node ./node_modules/japa-cli/index.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "commit": "git-cz",
-    "lint": "standard"
-  },
-  "keywords": [],
-  "author": "virk",
-  "license": "MIT",
-  "devDependencies": {
-    "@adonisjs/fold": "^4.0.9",
-    "@adonisjs/mrm-preset": "^1.0.14",
-    "@adonisjs/sink": "^1.0.17",
-    "commitizen": "^3.0.2",
-    "coveralls": "^3.0.2",
-    "cz-conventional-changelog": "^2.1.0",
-    "ioredis": "^4.1.0",
-    "japa": "^2.0.5",
-    "japa-cli": "^1.0.1",
-    "macroable": "^1.0.0",
-    "mrm": "^1.2.1",
-    "node-cookie": "^2.1.1",
-    "node-req": "^2.1.1",
-    "nyc": "^13.1.0",
-    "pkg-ok": "^2.3.1",
-    "semver": "^5.6.0",
-    "standard": "^12.0.1",
-    "supertest": "^3.3.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "nyc": {
-    "exclude": [
-      "test"
-    ]
-  },
-  "dependencies": {
-    "@adonisjs/generic-exceptions": "^2.0.1",
-    "bson": "^1.1.0",
-    "debug": "^4.1.0",
-    "fs-extra": "^7.0.0",
-    "lodash": "^4.17.11",
-    "ms": "^2.1.1",
-    "type-of-is": "^3.5.1",
-    "uuid": "^3.3.2"
+    "test": "node japaFile.js",
+    "prepublishOnly": "npm run build",
+    "clean": "del build",
+    "compile": "npm run lint && npm run clean && tsc",
+    "build": "npm run compile",
+    "lint": "tslint --project tsconfig.json",
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adonisjs/adonis-session.git"
   },
+  "keywords": [
+    "session",
+    "adonisjs"
+  ],
+  "author": "virk,adonisjs",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/adonisjs/adonis-session/issues"
   },
-  "homepage": "https://github.com/adonisjs/adonis-session#readme"
+  "homepage": "https://github.com/adonisjs/adonis-session#readme",
+  "nyc": {
+    "exclude": [
+      "test"
+    ],
+    "extension": [
+      ".ts"
+    ]
+  },
+  "main": "build/index.js",
+  "files": [
+    "build/src",
+    "build/index.d.ts",
+    "build/index.js"
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "doctoc README.md --title='## Table of contents' && git add README.md",
+      "commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  }
 }
