--- a/package.json
+++ b/package.json
@@ -2,9 +2,21 @@
   "name": "@adonisjs/session",
   "version": "1.0.28",
   "description": "Session provider for AdonisJs",
-  "dependencies": {},
+  "dependencies": {
+    "@types/bson": "^4.0.0",
+    "@types/lodash": "^4.14.135",
+    "bson": "^4.0.2",
+    "lodash": "^4.17.11",
+    "ms": "^2.1.2",
+    "type-of-is": "^3.5.1",
+    "uuid": "^3.3.2"
+  },
   "devDependencies": {
     "@adonisjs/mrm-preset": "^2.0.3",
+    "@adonisjs/redis": "^3.0.0",
+    "@poppinss/cookie": "^1.0.1",
+    "@poppinss/http-server": "^1.1.5",
+    "@poppinss/logger": "^1.1.0",
     "@types/node": "^12.0.10",
     "commitizen": "^3.1.1",
     "cz-conventional-changelog": "^2.1.0",
@@ -14,6 +26,7 @@
     "japa": "^2.0.10",
     "mrm": "^1.2.2",
     "pkg-ok": "^2.3.1",
+    "supertest": "^4.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "tslint-eslint-rules": "^5.4.0",
