chore(package): add npm publish config

--- a/package.json
+++ b/package.json
@@ -89,5 +89,9 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "publishConfig": {
+    "tag": "next",
+    "access": "public"
   }
 }
