--- a/package.json
+++ b/package.json
@@ -10,42 +10,44 @@
   ],
   "typings": "./build/adonis-typings/index.d.ts",
   "dependencies": {
-    "@poppinss/utils": "^1.0.3",
+    "@poppinss/utils": "^2.0.0",
     "@types/bson": "^4.0.0",
-    "@types/lodash": "^4.14.135",
+    "@types/lodash": "^4.14.138",
     "bson": "^4.0.2",
     "fs-extra": "^8.1.0",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.15",
     "ms": "^2.1.2",
     "type-of-is": "^3.5.1",
-    "uuid": "^3.3.2",
-    "snyk": "^1.195.1"
+    "uuid": "^3.3.3"
   },
   "peerDependencies": {
     "adonisjs/core": "2.x.x"
   },
   "devDependencies": {
-    "@adonisjs/core": "^2.0.4",
-    "@adonisjs/fold": "^6.1.0",
-    "@adonisjs/mrm-preset": "^2.0.3",
-    "@poppinss/cookie": "^1.0.1",
-    "@poppinss/dev-utils": "^1.0.0",
-    "@poppinss/http-server": "^1.1.6",
-    "@poppinss/logger": "^1.1.0",
-    "@types/node": "^12.6.8",
-    "commitizen": "^3.1.1",
-    "cz-conventional-changelog": "^2.1.0",
-    "del-cli": "^2.0.0",
+    "@adonisjs/core": "^2.1.0",
+    "@adonisjs/encryption": "^1.0.1",
+    "@adonisjs/fold": "^6.2.0",
+    "@adonisjs/http-server": "^1.2.10",
+    "@adonisjs/logger": "^1.1.6",
+    "@adonisjs/mrm-preset": "^2.1.0",
+    "@poppinss/cookie": "^1.0.2",
+    "@poppinss/dev-utils": "^1.0.1",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^12.7.5",
+    "@types/supertest": "^2.0.8",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2",
+    "del-cli": "^3.0.0",
     "doctoc": "^1.4.0",
-    "husky": "^3.0.1",
-    "japa": "^2.0.10",
+    "husky": "^3.0.5",
+    "japa": "^3.0.1",
     "mrm": "^1.2.2",
     "pkg-ok": "^2.3.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
@@ -56,9 +58,7 @@
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
     "lint": "tslint --project tsconfig.json",
-    "commit": "git-cz",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
@@ -96,6 +96,5 @@
   "publishConfig": {
     "tag": "next",
     "access": "public"
-  },
-  "snyk": true
+  }
 }
