--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@adonisjs/http-server": "^1.2.10",
     "@adonisjs/logger": "^1.1.6",
     "@adonisjs/mrm-preset": "^2.1.0",
+    "@adonisjs/redis": "^3.1.2",
     "@poppinss/cookie": "^1.0.2",
     "@poppinss/dev-utils": "^1.0.1",
     "@types/ms": "^0.7.31",
