--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./node_modules/@adonisjs/mrm-preset/_tsconfig",
   "files": [
-    "./node_modules/@adonisjs/http-server/build/adonis-typings/index.d.ts"
+    "./node_modules/@adonisjs/http-server/build/adonis-typings/index.d.ts",
+    "./node_modules/@adonisjs/redis/build/adonis-typings/redis.d.ts"
   ]
 }
