ci: add redis to circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build_10.15.3:
     docker:
       - image: 'circleci/node:10.15.3'
+      - image: 'circleci/redis'
     working_directory: ~/app
     steps:
       - checkout
@@ -15,10 +16,19 @@ jobs:
           paths:
             - node_modules
           key: 'v1-dependencies-{{ checksum "package-lock.json" }}'
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+      - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:6379 -timeout 1m
       - run: npm test
   build_latest:
     docker:
       - image: 'circleci/node:latest'
+      - image: 'circleci/redis'
     working_directory: ~/app
     steps:
       - checkout
@@ -31,6 +41,14 @@ jobs:
           paths:
             - node_modules
           key: 'v1-dependencies-{{ checksum "package-lock.json" }}'
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+      - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:6379 -timeout 1m
       - run: npm test
 workflows:
   version: 2
