--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "uuid": "^3.3.3"
   },
   "peerDependencies": {
-    "adonisjs/core": "2.x.x"
+    "@adonisjs/core": "2.x.x"
   },
   "devDependencies": {
     "@adonisjs/core": "^2.1.0",
