--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "cz-conventional-changelog": "^3.0.2",
     "del-cli": "^3.0.0",
     "doctoc": "^1.4.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-adonis": "^1.0.2",
     "husky": "^3.1.0",
     "japa": "^3.0.1",
     "mrm": "^2.0.0",
     "np": "^5.2.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
-    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.7.3"
   },
   "scripts": {
@@ -60,7 +60,7 @@
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc && copyfiles \"templates/*\" build",
     "build": "npm run compile",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint . --ext .ts",
     "commit": "git-cz",
     "release": "np",
     "version": "npm run build"
