--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "typings": "./build/adonis-typings/index.d.ts",
   "dependencies": {
-    "@poppinss/utils": "^2.1.0",
+    "@poppinss/utils": "^2.1.1",
     "@types/bson": "^4.0.1",
     "@types/lodash": "^4.14.149",
     "bson": "^4.0.2",
@@ -27,32 +27,32 @@
   },
   "devDependencies": {
     "@adonisjs/core": "^2.6.2",
-    "@adonisjs/encryption": "^1.0.2",
+    "@adonisjs/encryption": "^1.0.3",
     "@adonisjs/fold": "^6.2.3",
-    "@adonisjs/http-server": "^1.5.2",
-    "@adonisjs/logger": "^1.1.6",
-    "@adonisjs/mrm-preset": "^2.2.2",
+    "@adonisjs/http-server": "^1.6.0",
+    "@adonisjs/logger": "^1.1.7",
+    "@adonisjs/mrm-preset": "^2.2.3",
     "@adonisjs/redis": "^3.1.2",
-    "@adonisjs/sink": "^2.4.0",
-    "@poppinss/cookie": "^1.0.2",
-    "@poppinss/dev-utils": "^1.0.2",
+    "@adonisjs/sink": "^2.4.2",
+    "@poppinss/cookie": "^1.0.3",
+    "@poppinss/dev-utils": "^1.0.3",
     "@types/ms": "^0.7.31",
-    "@types/node": "^12.12.14",
+    "@types/node": "^13.1.0",
     "@types/supertest": "^2.0.8",
     "commitizen": "^4.0.3",
     "copyfiles": "^2.1.1",
     "cz-conventional-changelog": "^3.0.2",
     "del-cli": "^3.0.0",
     "doctoc": "^1.4.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-adonis": "^1.0.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-adonis": "^1.0.4",
     "husky": "^3.1.0",
     "japa": "^3.0.1",
-    "mrm": "^2.0.0",
+    "mrm": "^2.0.2",
     "np": "^5.2.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
@@ -61,7 +61,7 @@
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc && copyfiles \"templates/*\" build",
     "build": "npm run compile",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext=.ts",
     "commit": "git-cz",
     "release": "np",
     "version": "npm run build"
