--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   "dependencies": {
     "@poppinss/utils": "^2.1.1",
     "@types/bson": "^4.0.1",
-    "@types/lodash": "^4.14.149",
     "bson": "^4.0.2",
     "fast-safe-stringify": "^2.0.7",
     "fs-extra": "^8.1.0",
-    "lodash": "^4.17.15",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
+    "lodash.unset": "^4.5.2",
     "ms": "^2.1.2",
     "type-of-is": "^3.5.1",
     "uuid": "^3.3.3"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^2.0.0"
+    "@adonisjs/http-server": "^1.0.0"
   },
   "devDependencies": {
-    "@adonisjs/core": "^2.6.2",
     "@adonisjs/encryption": "^1.0.3",
     "@adonisjs/fold": "^6.2.3",
     "@adonisjs/http-server": "^1.6.0",
     "@adonisjs/logger": "^1.1.7",
     "@adonisjs/mrm-preset": "^2.2.3",
-    "@adonisjs/redis": "^3.1.2",
-    "@adonisjs/sink": "^2.4.2",
+    "@adonisjs/profiler": "^1.2.4",
+    "@adonisjs/redis": "^3.2.0",
     "@poppinss/cookie": "^1.0.3",
     "@poppinss/dev-utils": "^1.0.3",
     "@types/ms": "^0.7.31",
