--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@poppinss/utils": "^2.1.1",
     "@types/bson": "^4.0.1",
     "bson": "^4.0.2",
+    "cuid": "^2.1.8",
     "fast-safe-stringify": "^2.0.7",
     "fs-extra": "^8.1.0",
     "lodash.get": "^4.4.2",
@@ -29,7 +30,7 @@
   "devDependencies": {
     "@adonisjs/encryption": "^1.0.3",
     "@adonisjs/fold": "^6.2.3",
-    "@adonisjs/http-server": "^1.6.1",
+    "@adonisjs/http-server": "^1.6.2",
     "@adonisjs/logger": "^1.1.7",
     "@adonisjs/mrm-preset": "^2.2.3",
     "@adonisjs/profiler": "^1.2.4",
