chore: remove @adonisjs/core from tsconfig file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "skipLibCheck": true,
     "types": [
-      "@types/node",
-      "@adonisjs/core"
+      "@types/node"
     ]
   }
 }
