--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "cuid": "^2.1.8",
     "fast-safe-stringify": "^2.0.7",
     "fs-extra": "^8.1.0",
-    "lodash.get": "^4.4.2",
-    "lodash.set": "^4.3.2",
-    "lodash.unset": "^4.5.2",
+    "lodash": "^4.17.15",
     "ms": "^2.1.2",
     "type-of-is": "^3.5.1",
     "uuid": "^3.3.3"
