chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "typings": "./build/adonis-typings/index.d.ts",
   "dependencies": {
-    "@poppinss/utils": "^2.1.1",
+    "@poppinss/utils": "^2.1.2",
     "@types/bson": "^4.0.1",
     "bson": "^4.0.3",
     "cuid": "^2.1.8",
@@ -20,38 +20,38 @@
     "lodash": "^4.17.15",
     "ms": "^2.1.2",
     "type-of-is": "^3.5.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.4.0"
   },
   "peerDependencies": {
-    "@adonisjs/http-server": "^1.0.0"
+    "@adonisjs/core": "^2.0.0"
   },
   "devDependencies": {
-    "@adonisjs/encryption": "^1.0.3",
-    "@adonisjs/fold": "^6.2.3",
-    "@adonisjs/http-server": "^1.6.4",
-    "@adonisjs/logger": "^1.1.7",
-    "@adonisjs/mrm-preset": "^2.2.3",
-    "@adonisjs/profiler": "^1.2.4",
+    "@adonisjs/encryption": "^1.0.4",
+    "@adonisjs/fold": "^6.3.3",
+    "@adonisjs/http-server": "^1.7.0",
+    "@adonisjs/logger": "^1.1.8",
+    "@adonisjs/mrm-preset": "^2.2.4",
+    "@adonisjs/profiler": "^2.0.0",
     "@adonisjs/redis": "^3.2.0",
-    "@poppinss/cookie": "^1.0.5",
-    "@poppinss/dev-utils": "^1.0.3",
+    "@poppinss/cookie": "^1.0.7",
+    "@poppinss/dev-utils": "^1.0.4",
     "@types/ms": "^0.7.31",
-    "@types/node": "^13.1.6",
+    "@types/node": "^13.7.0",
     "@types/supertest": "^2.0.8",
     "commitizen": "^4.0.3",
-    "copyfiles": "^2.1.1",
-    "cz-conventional-changelog": "^3.0.2",
+    "copyfiles": "^2.2.0",
+    "cz-conventional-changelog": "^3.1.0",
     "del-cli": "^3.0.0",
     "doctoc": "^1.4.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-adonis": "^1.0.5",
-    "husky": "^4.0.7",
+    "eslint-plugin-adonis": "^1.0.6",
+    "husky": "^4.2.1",
     "japa": "^3.0.1",
-    "mrm": "^2.0.2",
+    "mrm": "^2.0.4",
     "np": "^5.2.1",
     "supertest": "^4.0.2",
-    "ts-node": "^8.6.1",
-    "typescript": "^3.7.4"
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
