--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
     "ms": "^2.1.2",
-    "type-of-is": "^3.5.1",
-    "uuid": "^3.4.0"
+    "type-of-is": "^3.5.1"
   },
   "peerDependencies": {
     "@adonisjs/core": "^2.0.0"
@@ -28,15 +27,15 @@
   "devDependencies": {
     "@adonisjs/encryption": "^1.0.4",
     "@adonisjs/fold": "^6.3.3",
-    "@adonisjs/http-server": "^1.7.0",
+    "@adonisjs/http-server": "^1.7.4",
     "@adonisjs/logger": "^1.1.8",
     "@adonisjs/mrm-preset": "^2.2.4",
     "@adonisjs/profiler": "^2.0.0",
     "@adonisjs/redis": "^3.2.0",
-    "@poppinss/cookie": "^1.0.7",
+    "@poppinss/cookie": "^1.0.8",
     "@poppinss/dev-utils": "^1.0.4",
     "@types/ms": "^0.7.31",
-    "@types/node": "^13.7.0",
+    "@types/node": "^13.7.6",
     "@types/supertest": "^2.0.8",
     "commitizen": "^4.0.3",
     "copyfiles": "^2.2.0",
@@ -44,14 +43,14 @@
     "del-cli": "^3.0.0",
     "doctoc": "^1.4.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-adonis": "^1.0.6",
-    "husky": "^4.2.1",
+    "eslint-plugin-adonis": "^1.0.8",
+    "husky": "^4.2.3",
     "japa": "^3.0.1",
     "mrm": "^2.0.4",
     "np": "^5.2.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.2"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
