--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adonisjs/session",
   "version": "3.0.0",
-  "description": "Session provider for AdonisJs",
+  "description": "Session provider for AdonisJS",
   "main": "build/providers/SessionProvider.js",
   "files": [
     "build/adonis-typings",
@@ -20,11 +20,10 @@
     "@adonisjs/core": "^5.0.0-preview-rc"
   },
   "devDependencies": {
-    "@adonisjs/core": "^5.0.0-preview-rc-1",
+    "@adonisjs/core": "^5.0.0-preview-rc-1.2",
     "@adonisjs/fold": "^6.3.5",
     "@adonisjs/mrm-preset": "^2.3.0",
-    "@adonisjs/redis": "^3.2.0",
-    "@poppinss/cookie": "^1.0.8",
+    "@adonisjs/redis": "^4.0.0",
     "@poppinss/dev-utils": "^1.0.6",
     "@types/ms": "^0.7.31",
     "@types/node": "^13.13.0",
