--- a/package.json
+++ b/package.json
@@ -1,111 +1,119 @@
 {
-  "name": "@adonisjs/session",
-  "version": "3.0.4",
-  "description": "Session provider for AdonisJS",
-  "main": "build/providers/SessionProvider.js",
-  "files": [
-    "build/adonis-typings",
-    "build/providers",
-    "build/src",
-    "build/templates"
-  ],
-  "typings": "./build/adonis-typings/index.d.ts",
-  "dependencies": {
-    "@poppinss/utils": "^2.2.7",
-    "cuid": "^2.1.8",
-    "fs-extra": "^9.0.1",
-    "ms": "^2.1.2"
-  },
-  "peerDependencies": {
-    "@adonisjs/core": "^5.0.0-preview-rc"
-  },
-  "devDependencies": {
-    "@adonisjs/core": "^5.0.0-preview-rc-1.7",
-    "@adonisjs/fold": "^6.3.5",
-    "@adonisjs/mrm-preset": "^2.3.0",
-    "@adonisjs/redis": "^4.0.2",
-    "@poppinss/dev-utils": "^1.0.6",
-    "@types/ms": "^0.7.31",
-    "@types/node": "^14.0.13",
-    "@types/supertest": "^2.0.9",
-    "commitizen": "^4.1.2",
-    "copyfiles": "^2.3.0",
-    "cz-conventional-changelog": "^3.2.0",
-    "del-cli": "^3.0.1",
-    "eslint": "^7.2.0",
-    "eslint-plugin-adonis": "^1.0.10",
-    "husky": "^4.2.5",
-    "japa": "^3.1.1",
-    "mrm": "^2.3.3",
-    "np": "^6.2.4",
-    "supertest": "^4.0.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
-  },
-  "scripts": {
-    "mrm": "mrm --preset=@adonisjs/mrm-preset",
-    "pretest": "npm run lint",
-    "test": "node japaFile.js",
-    "clean": "del build",
-    "compile": "npm run lint && npm run clean && tsc && copyfiles \"templates/*\" build",
-    "build": "npm run compile",
-    "lint": "eslint . --ext=.ts",
-    "commit": "git-cz",
-    "release": "np",
-    "version": "npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/adonisjs/adonis-session.git"
-  },
-  "keywords": [
-    "session",
-    "adonisjs"
-  ],
-  "author": "virk,adonisjs",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/adonisjs/adonis-session/issues"
-  },
-  "homepage": "https://github.com/adonisjs/adonis-session#readme",
-  "nyc": {
-    "exclude": [
-      "test"
-    ],
-    "extension": [
-      ".ts"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
-    }
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "publishConfig": {
-    "tag": "alpha",
-    "access": "public"
-  },
-  "adonisjs": {
-    "templates": {
-      "config": [
-        "session.txt"
-      ]
-    },
-    "env": {
-      "SESSION_DRIVER": "cookie"
-    },
-    "types": "@adonisjs/session",
-    "providers": [
-      "@adonisjs/session"
-    ]
-  },
-  "np": {
-    "contents": ".",
-    "anyBranch": false
-  }
+	"name": "@adonisjs/session",
+	"version": "3.0.4",
+	"description": "Session provider for AdonisJS",
+	"typings": "./build/adonis-typings/index.d.ts",
+	"files": [
+		"build/adonis-typings",
+		"build/providers",
+		"build/src",
+		"build/templates"
+	],
+	"dependencies": {
+		"@poppinss/utils": "^2.5.1",
+		"cuid": "^2.1.8",
+		"fs-extra": "^9.0.1",
+		"ms": "^2.1.2"
+	},
+	"peerDependencies": {
+		"@adonisjs/core": "^5.0.0-preview-rc"
+	},
+	"devDependencies": {
+		"@adonisjs/core": "^5.0.0-preview-rc-1.7",
+		"@adonisjs/fold": "^6.3.5",
+		"@adonisjs/mrm-preset": "^2.4.0",
+		"@adonisjs/redis": "^4.1.1",
+		"@poppinss/dev-utils": "^1.0.8",
+		"@types/ms": "^0.7.31",
+		"@types/node": "^14.0.26",
+		"@types/supertest": "^2.0.10",
+		"commitizen": "^4.1.2",
+		"copyfiles": "^2.3.0",
+		"cz-conventional-changelog": "^3.2.0",
+		"del-cli": "^3.0.1",
+		"eslint": "^7.5.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-adonis": "^1.0.14",
+		"eslint-plugin-prettier": "^3.1.4",
+		"github-label-sync": "^2.0.0",
+		"husky": "^4.2.5",
+		"japa": "^3.1.1",
+		"mrm": "^2.3.3",
+		"np": "^6.3.2",
+		"npm-audit-html": "^1.4.1",
+		"prettier": "^2.0.5",
+		"supertest": "^4.0.2",
+		"ts-node": "^8.10.2",
+		"typescript": "^3.9.7"
+	},
+	"scripts": {
+		"mrm": "mrm --preset=@adonisjs/mrm-preset",
+		"pretest": "npm run lint",
+		"test": "node japaFile.js",
+		"clean": "del build",
+		"compile": "npm run lint && npm run clean && tsc",
+		"build": "npm run compile",
+		"commit": "git-cz",
+		"release": "np",
+		"version": "npm run build",
+		"prepublishOnly": "npm run build",
+		"lint": "eslint . --ext=.ts",
+		"format": "prettier --write .",
+		"sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json adonisjs/session"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/adonisjs/adonis-session.git"
+	},
+	"keywords": [
+		"session",
+		"adonisjs"
+	],
+	"author": "virk,adonisjs",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/adonisjs/adonis-session/issues"
+	},
+	"homepage": "https://github.com/adonisjs/adonis-session#readme",
+	"nyc": {
+		"exclude": [
+			"test"
+		],
+		"extension": [
+			".ts"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js",
+			"pre-commit": "npm audit --production --json | ./node_modules/.bin/npm-audit-html && git add npm-audit.html"
+		}
+	},
+	"config": {
+		"commitizen": {
+			"path": "cz-conventional-changelog"
+		}
+	},
+	"publishConfig": {
+		"tag": "alpha",
+		"access": "public"
+	},
+	"adonisjs": {
+		"templates": {
+			"config": [
+				"session.txt"
+			]
+		},
+		"env": {
+			"SESSION_DRIVER": "cookie"
+		},
+		"types": "@adonisjs/session",
+		"providers": [
+			"@adonisjs/session"
+		]
+	},
+	"np": {
+		"contents": ".",
+		"anyBranch": false
+	}
 }
