--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  "extends": "./node_modules/@adonisjs/mrm-preset/_tsconfig",
-  "compilerOptions": {
-    "skipLibCheck": true
-  },
-  "files": [
-    "./node_modules/@adonisjs/core/build/adonis-typings/index.d.ts"
-  ]
+	"extends": "./node_modules/@adonisjs/mrm-preset/_tsconfig",
+	"compilerOptions": {
+		"skipLibCheck": true
+	},
+	"files": ["./node_modules/@adonisjs/core/build/adonis-typings/index.d.ts"]
 }
