--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
 		"test": "node japaFile.js",
 		"clean": "del build",
 		"compile": "npm run lint && npm run clean && tsc",
-		"build": "npm run compile",
+		"copyfiles": "copyfiles \"templates/*\" build",
+		"build": "npm run compile && npm run copyfiles",
 		"commit": "git-cz",
 		"release": "np",
 		"version": "npm run build",
