--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "3.0.6",
 	"description": "Session provider for AdonisJS",
 	"typings": "./build/adonis-typings/index.d.ts",
+	"main": "build/providers/SessionProvider.js",
 	"files": [
 		"build/adonis-typings",
 		"build/providers",
