--- a/package.json
+++ b/package.json
@@ -11,41 +11,40 @@
 		"build/templates"
 	],
 	"dependencies": {
-		"@poppinss/utils": "^2.5.5",
+		"@poppinss/utils": "^2.5.7",
 		"cuid": "^2.1.8",
 		"fs-extra": "^9.0.1",
 		"ms": "^2.1.2"
 	},
 	"peerDependencies": {
-		"@adonisjs/core": "^5.0.0-preview-rc"
+		"@adonisjs/core": "^5.0.1-beta-rc"
 	},
 	"devDependencies": {
-		"@adonisjs/core": "^5.0.0-preview-rc-1.11",
-		"@adonisjs/fold": "^6.4.0",
+		"@adonisjs/core": "^5.0.1-beta-rc-3",
 		"@adonisjs/mrm-preset": "^2.4.0",
-		"@adonisjs/redis": "^4.1.1",
-		"@poppinss/dev-utils": "^1.0.8",
+		"@adonisjs/redis": "^5.0.0",
+		"@adonisjs/require-ts": "^1.0.4",
+		"@poppinss/dev-utils": "^1.0.11",
 		"@types/ms": "^0.7.31",
-		"@types/node": "^14.6.1",
+		"@types/node": "^14.11.8",
 		"@types/supertest": "^2.0.10",
 		"commitizen": "^4.2.1",
-		"copyfiles": "^2.3.0",
+		"copyfiles": "^2.4.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"del-cli": "^3.0.1",
-		"eslint": "^7.7.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-adonis": "^1.0.14",
+		"eslint": "^7.11.0",
+		"eslint-config-prettier": "^6.12.0",
+		"eslint-plugin-adonis": "^1.0.15",
 		"eslint-plugin-prettier": "^3.1.4",
 		"github-label-sync": "^2.0.0",
-		"husky": "^4.2.5",
+		"husky": "^4.3.0",
 		"japa": "^3.1.1",
-		"mrm": "^2.3.5",
-		"np": "^6.4.0",
+		"mrm": "^2.5.2",
+		"np": "^6.5.0",
 		"npm-audit-html": "^1.4.3",
-		"prettier": "^2.1.1",
-		"supertest": "^4.0.2",
-		"ts-node": "^9.0.0",
-		"typescript": "^3.9.7"
+		"prettier": "^2.1.2",
+		"supertest": "^5.0.0",
+		"typescript": "^4.0.3"
 	},
 	"scripts": {
 		"mrm": "mrm --preset=@adonisjs/mrm-preset",
