--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
 		"ms": "^2.1.2"
 	},
 	"peerDependencies": {
-		"@adonisjs/core": "^5.0.3-beta-rc"
+		"@adonisjs/core": "^5.0.4-preview-rc"
 	},
 	"devDependencies": {
-		"@adonisjs/core": "^5.0.3-beta-rc-10",
+		"@adonisjs/core": "^5.0.4-preview-rc-2",
 		"@adonisjs/mrm-preset": "^2.4.0",
-		"@adonisjs/redis": "^5.0.5",
+		"@adonisjs/redis": "^5.0.8",
 		"@adonisjs/require-ts": "^1.0.4",
 		"@poppinss/dev-utils": "^1.0.11",
 		"@types/ms": "^0.7.31",
-		"@types/node": "^14.14.0",
+		"@types/node": "^14.14.2",
 		"@types/supertest": "^2.0.10",
 		"commitizen": "^4.2.2",
 		"copyfiles": "^2.4.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"del-cli": "^3.0.1",
-		"eslint": "^7.11.0",
-		"eslint-config-prettier": "^6.13.0",
+		"eslint": "^7.12.0",
+		"eslint-config-prettier": "^6.14.0",
 		"eslint-plugin-adonis": "^1.0.15",
 		"eslint-plugin-prettier": "^3.1.4",
 		"github-label-sync": "^2.0.0",
