--- a/package.json
+++ b/package.json
@@ -12,36 +12,36 @@
     "build/instructions.md"
   ],
   "dependencies": {
-    "@poppinss/utils": "^3.0.3",
+    "@poppinss/utils": "^3.0.5",
     "fs-extra": "^9.1.0"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^5.0.5-canary-rc"
+    "@adonisjs/core": "^5.1.0"
   },
   "devDependencies": {
-    "@adonisjs/core": "^5.0.5-canary-rc-2",
+    "@adonisjs/core": "^5.1.0",
     "@adonisjs/mrm-preset": "^3.0.0",
-    "@adonisjs/redis": "^6.0.1",
-    "@adonisjs/require-ts": "^2.0.2",
-    "@poppinss/dev-utils": "^1.1.0",
-    "@types/node": "^14.14.28",
+    "@adonisjs/redis": "^7.0.0",
+    "@adonisjs/require-ts": "^2.0.3",
+    "@poppinss/dev-utils": "^1.1.1",
+    "@types/node": "^14.14.35",
     "@types/supertest": "^2.0.10",
     "commitizen": "^4.2.3",
     "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.3.0",
     "del-cli": "^3.0.1",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-adonis": "^1.2.1",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-adonis": "^1.3.0",
     "eslint-plugin-prettier": "^3.3.1",
     "github-label-sync": "^2.0.0",
-    "husky": "^5.0.9",
+    "husky": "^5.2.0",
     "japa": "^3.1.1",
-    "mrm": "^2.5.18",
+    "mrm": "^2.6.1",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
