--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,6 @@ jobs:
         run: npm install
       - name: Run tests
         run: npm test
+        env:
+          REDIS_HOST: redis
+          REDIS_PORT: 6379
