--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 6379:6379
     strategy:
       matrix:
         node-version:
@@ -29,5 +31,5 @@ jobs:
       - name: Run tests
         run: npm test
         env:
-          REDIS_HOST: redis
+          REDIS_HOST: 0.0.0.0
           REDIS_PORT: 6379
