--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
       "stale",
       "lock"
     ],
-    "runGhActionsOnWindows": true
+    "runGhActionsOnWindows": false
   },
   "eslintConfig": {
     "extends": [
