--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@adonisjs/mrm-preset": "^5.0.2",
     "@adonisjs/redis": "^7.1.1",
     "@adonisjs/require-ts": "^2.0.10",
+    "@japa/assert": "^1.2.3",
+    "@japa/run-failed-tests": "^1.0.3",
+    "@japa/runner": "^1.2.0",
+    "@japa/spec-reporter": "^1.1.7",
     "@poppinss/dev-utils": "^2.0.2",
     "@types/node": "^17.0.21",
     "@types/supertest": "^2.0.11",
@@ -36,7 +40,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "github-label-sync": "^2.0.2",
     "husky": "^7.0.4",
-    "japa": "^4.0.0",
     "mrm": "^3.0.10",
     "np": "^7.6.0",
     "prettier": "^2.5.1",
@@ -46,7 +49,7 @@
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test": "node .bin/test.js",
+    "test": "node -r @adonisjs/require-ts/build/register ./bin/test.ts",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
     "copyfiles": "copyfiles \"templates/**/*.txt\" \"instructions.md\" build",
