--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mrm": "^4.0.0",
     "np": "^7.6.1",
     "prettier": "^2.6.2",
+    "set-cookie-parser": "^2.4.8",
     "supertest": "^6.2.3",
     "typescript": "^4.6.4"
   },
