chore: add japa/api-client as peer dependency

--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
   "peerDependenciesMeta": {
     "@adonisjs/redis": {
       "optional": true
+    },
+    "@japa/api-client": {
+      "optional": true
     }
   },
   "author": "virk,adonisjs",
