chore: export factories

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "exports": {
     ".": "./build/index.js",
+    "./factories": "./build/factories/main.js",
     "./session_provider": "./build/providers/session_provider.js",
     "./session_middleware": "./build/src/session_middleware.js",
     "./client": "./build/src/client.js",
@@ -46,7 +47,9 @@
     "@adonisjs/prettier-config": "^1.1.8",
     "@adonisjs/redis": "^8.0.0-10",
     "@adonisjs/tsconfig": "^1.1.8",
+    "@japa/api-client": "^2.0.0-0",
     "@japa/assert": "^2.0.0-1",
+    "@japa/browser-client": "^2.0.0-3",
     "@japa/file-system": "^2.0.0-1",
     "@japa/plugin-adonisjs": "^2.0.0-1",
     "@japa/runner": "^3.0.0-6",
@@ -65,6 +68,7 @@
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
+    "playwright": "^1.37.1",
     "prettier": "^3.0.2",
     "set-cookie-parser": "^2.6.0",
     "supertest": "^6.3.3",
