feat: add japa api client plugin

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "./factories": "./build/factories/main.js",
     "./session_provider": "./build/providers/session_provider.js",
     "./session_middleware": "./build/src/session_middleware.js",
+    "./plugin_edge": "./build/src/edge_plugin_adonisjs_session.js",
     "./client": "./build/src/client.js",
     "./types": "./build/src/types.js"
   },
@@ -50,7 +51,6 @@
     "@adonisjs/tsconfig": "^1.1.8",
     "@japa/api-client": "^2.0.0-0",
     "@japa/assert": "^2.0.0-1",
-    "@japa/browser-client": "^2.0.0-3",
     "@japa/file-system": "^2.0.0-1",
     "@japa/plugin-adonisjs": "^2.0.0-1",
     "@japa/runner": "^3.0.0-6",
@@ -66,10 +66,10 @@
     "del-cli": "^5.0.0",
     "edge.js": "^6.0.0-8",
     "eslint": "^8.49.0",
+    "get-port": "^7.0.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
-    "playwright": "^1.38.0",
     "prettier": "^3.0.2",
     "set-cookie-parser": "^2.6.0",
     "supertest": "^6.3.3",
